reverted base64 encryption. default zmq disabled omit latest values in vs list